--- a/POKIMOON/vistas/login.html
+++ b/POKIMOON/vistas/login.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>POKIMON</title>
-  <script src="../js/index.js"></script>
   <style>
     body {
       background-image: url('https://wallpapers.com/images/hd/epic-charizard-5bvdryvpw901d5tw.jpg');
@@ -50,8 +49,8 @@
       margin-top: 6px;
       border-radius: 12px;
       border: none;
-      background-color: rgba(255, 255, 255, 0.15);
-      color: white;
+      background-color: rgb(255, 255, 255);
+      color: rgb(10, 10, 10);
       outline: none;
       font-size: 14px;
     }
@@ -100,5 +99,19 @@
     <img src="https://img.icons8.com/color/48/000000/pokeball-2.png" alt="Pokebola">
     Iniciar sesión
   </button>
+
+  <script>
+    function Loguear() {
+      const usuario = document.getElementById("username").value;
+      const clave = document.getElementById("clave").value;
+
+      if (usuario && clave) {
+        // Redireccionar a Genero.html que está en la carpeta vistas
+        window.location.href = "Genero.html";
+      } else {
+        alert("Por favor ingresa usuario y contraseña.");
+      }
+    }
+  </script>
 </body>
 </html>
