--- a/POKIMOON/vistas/registro.html
+++ b/POKIMOON/vistas/registro.html
@@ -9,16 +9,15 @@
       margin: 0;
       padding: 0;
       height: 100vh;
-      position: relative;
       overflow: hidden;
       font-family: 'Arial', sans-serif;
-      color: white;
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
+      color: black;
     }
 
-    /* Fondo con brillito animado */
+    /* Fondo con imagen y brillito */
     body::before {
       content: "";
       position: absolute;
@@ -27,10 +26,8 @@
       height: 100%;
       width: 100%;
       background-image: url('https://phantom-marca.unidadeditorial.es/0773be0be916fcedef0d1a7acdd392e7/resize/828/f/jpg/assets/multimedia/imagenes/2024/04/18/17134478892062.jpg');
-      background-size: 110%;
+      background-size: cover;
       background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
       z-index: -2;
     }
 
@@ -51,36 +48,29 @@
       100% { transform: rotate(360deg); }
     }
 
-    .form-wrapper {
-      margin-left: 5%;
-      backdrop-filter: blur(6px);
-      background-color: rgba(0, 0, 0, 0.4);
-      padding: 35px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+    form {
+      backdrop-filter: none;
+      background: transparent;
+      padding: 20px;
+      border-radius: 0;
+      box-shadow: none;
+      max-width: 320px;
+      width: 100%;
+      text-align: center;
     }
 
     h1, p {
-      text-shadow: 2px 2px 4px #000;
       margin: 5px 0;
-    }
-
-    form {
-      max-width: 300px;
-      margin-top: 20px;
-    }
-
-    form p {
-      font-size: 20px;
-      font-weight: bold;
-      margin-bottom: 15px;
-      text-shadow: 1px 1px 2px #000;
+      color: white;
+      text-shadow: 2px 2px 4px #000;
     }
 
     label {
       display: block;
       margin-top: 12px;
       font-size: 14px;
+      text-align: left;
+      color: white;
       text-shadow: 1px 1px 2px #000;
     }
 
@@ -90,17 +80,17 @@
       width: 100%;
       padding: 10px;
       margin-top: 5px;
-      border-radius: 12px;
-      border: 1px solid #ffcc00;
-      background-color: rgba(255, 255, 255, 0.1);
-      color: white;
+      border-radius: 8px;
+      border: 1px solid #fff;
       font-size: 14px;
       outline: none;
-      transition: border 0.3s ease;
+      background-color: rgba(255, 255, 255, 0.2);
+      color: black;
     }
 
     input:focus {
-      border: 2px solid #ffaa00;
+      border-color: #ffaa00;
+      background-color: white;
     }
 
     button {
@@ -125,7 +115,6 @@
     button:hover {
       background-color: #ffaa00;
       transform: scale(1.05);
-      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.6);
     }
 
     .pokeball-icon {
@@ -133,33 +122,57 @@
       height: 22px;
     }
   </style>
+  <script>
+    function Registrar() {
+      const nombre = document.getElementById("nombre").value.trim();
+      const apellido = document.getElementById("apellido").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const contrasena = document.getElementById("contrasena").value;
+
+      if (!nombre || !apellido || !email || !contrasena) {
+        alert("Por favor, completa todos los campos.");
+        return;
+      }
+
+      const usuario = {
+        nombre,
+        apellido,
+        email,
+        contrasena
+      };
+
+      localStorage.setItem("user", JSON.stringify(usuario));
+      alert("¡Registro exitoso! Ahora puedes iniciar sesión.");
+
+
+      window.location.href = "Login.html";
+    }
+  </script>
   <script src="../js/registrar.js"></script>
 </head>
 <body>
-  <div class="form-wrapper">
+  <form>
     <h1>BIENVENIDO AL MUNDO POKIMON</h1>
     <p>Bienvenido a mi primer juego en JavaScript</p>
 
-    <form>
-      <p>Registro</p>
+    <p>Registro</p>
 
-      <label for="nombre">Nombre</label>
-      <input type="text" id="nombre">
+    <label for="nombre">Nombre</label>
+    <input type="text" id="nombre">
 
-      <label for="apellido">Apellido</label>
-      <input type="text" id="apellido">
+    <label for="apellido">Apellido</label>
+    <input type="text" id="apellido">
 
-      <label for="email">Email</label>
-      <input type="email" id="email">
+    <label for="email">Email</label>
+    <input type="email" id="email">
 
-      <label for="contrasena">Contraseña</label>
-      <input type="password" id="contrasena">
+    <label for="contrasena">Contraseña</label>
+    <input type="password" id="contrasena">
 
-      <button type="button" onclick="Registrar()">
-        <img src="https://img.icons8.com/color/48/000000/pokeball-2.png" class="pokeball-icon" alt="Pokebola">
-        Registrar
-      </button>
-    </form>
-  </div>
+    <button type="button" onclick="Registrar()">
+      <img src="https://img.icons8.com/color/48/000000/pokeball-2.png" class="pokeball-icon" alt="Pokebola">
+      Registrar
+    </button>
+  </form>
 </body>
 </html>
